--- a/config/locales/nl/budgets.yml
+++ b/config/locales/nl/budgets.yml
@@ -4,9 +4,12 @@ nl:
       show:
         title: Uw keuze
         amount_spent: Uitgegeven
-        remaining: "U heeft nog <span>%{amount}</span> te spenderen."
+        remaining:
+          knapsack_html: "U heeft nog <span>%{amount}</span> te spenderen."
+          approval_html: "Je kunt nog steeds <span>%{amount}</span> stemmen plaatsen."
         no_balloted_group_yet: "U hebt nog niet gestemd op deze groep, stem nu!"
         remove: Verwijder keuze
+        votes_cast_html: "Uitgebrachte stemmen: <span>%{amount}</span>"
         voted_html:
           one: "U heeft op <span>één</span> voorstel gestemd."
           other: "U heeft op <span>%{count}</span> voorstellen gestemd."
